--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@900&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>練習網頁</title>
@@ -28,6 +28,6 @@
     <p><a href="https://instagram.com/paopao_chacha?igshid=YmMyMTA2M2Y=">instagram</a>
     </p>  
   <button>Change user</button>
-  <script src="main.js"></script>
+  <script src="scripts/main.js"></script>
   </body>
 </html>
