--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@900&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <title>練習網頁</title>
+    <title>操蛋的練習網頁</title>
   </head>
   <body>
     <h1>這是一個新手製作的網站</h1>
