--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@900&display=swap" rel="stylesheet">
     <meta charset="utf-8">
+    <meta property="og:url" content="https://a5011515.github.io/">
+    <meta property="og:image" content="images/蝦仁炒蛋.jpg">
+    <meta property="og:description" content="這是一個操蛋用來練習的網頁">
+    <meta property="og:title" content="操蛋網">
     <title>操蛋的練習網頁</title>
   </head>
   <body>
