--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@900&display=swap" rel="stylesheet">
     <meta charset="utf-8">
+    <meta property="og:type content="website">
     <meta property="og:url" content="https://a5011515.github.io/">
-    <meta property="og:image" content="https://raw.githubusercontent.com/a5011515/a5011515.github.io/main/images/%E8%9D%A6%E4%BB%81%E7%82%92%E9%A3%AF.jpg">
+    <meta property="og:image" content="https://live.staticflickr.com/7050/6999926091_c2a139e42a_b.jpg">
     <meta property="og:description" content="這是一個操蛋用來練習的網頁">
     <meta property="og:title" content="操蛋網">
     <title>操蛋的練習網頁</title>
