--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@900&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="蛋塔.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/蛋塔.png" type="image/x-icon">
     <meta property="og:type content="website">
     <meta property="og:url" content="https://a5011515.github.io/">
     <meta property="og:image" content="https://imgur.com/RMo2Ocu">
