--- a/index.html
+++ b/index.html
@@ -29,8 +29,15 @@
     </p>
     <p>光是學會製作這個網站就花了一陣子，從了解製作網站的原理，創建一個資料夾，
       以及建立標題，段落設置、清單建立、上傳圖片等等就費了不少時間，所以我決定先吃個
-      消夜再決定下一步。
+      消夜再決定下一步。                       
     </p>
+    <h2>3/18心情:</h2>
+    <p>從開始學習到今天也半個月了，學習的熱情真的是一點一滴的減少，最主要還是教學網站的英文實在是不好理解，
+       真不曉得當初讀大學那些課本是原文書的同學，怎麼會有心情學習下去。其實對於製作網站我還是挺有興趣的，
+       但只要讀到新的章節，馬上就有很多艱澀難懂的單字或片語需要理解，就算找到解釋了，整個語法還是很難懂。</p>
+    <p>有幾個不會的地方高中好像都有學過，但幾年沒用真的都忘了，再加上對英語的沒自信，實在是讓我學習的很痛苦，
+        除了要學習網站操作外，還要背英文，不知不覺就抱怨了起來。但能理解到抱怨是好事，就會一起想到該如何解決，
+        目前就是死撐活撐的繼續學下去。</p>                                             
     <p><a href="https://instagram.com/paopao_chacha?igshid=YmMyMTA2M2Y=" title="The Mozilla homepage">instagram</a>
     </p>  
   <button>Change user</button>
