--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <img src="images/加油圖.jpg" alt="My test image">
     <P>關於新手學習製作網站有遇到以下困難點:
       <ul>
-        <li>教學網站是英文，看不懂也學不會</li>
-        <li>學習途中肚子餓，很常分心</li>
+        <li>教<sub>學</sub>網站是英文，看不懂也學不會</li>
+        <li>學<sup>習</sup>途中肚子餓，很常分心</li>
         <li>製作網站編碼太科幻，沒有老師也沒有經驗根本不懂發生什麼事</li>
         <li>原本學習的初衷是想賺錢，但後來發現太多大公司在做這件事，瞬間沒了學習動力</li>
       </ul>  
