--- a/assets/index.html
+++ b/assets/index.html
@@ -17,7 +17,7 @@
   <h1>Birdwatching</h1>
       <img src="images/dove.png" alt="a simple dove logo"></header>
 
-
+  <article>
       <ul>
         <li><span>Home</span></li>
         <li><a href="#">Get started</a></li>
@@ -25,6 +25,7 @@
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
       </ul>
+   </article>
 </header>
 
 <main>
