--- a/assets/index.html
+++ b/assets/index.html
@@ -16,7 +16,7 @@
 <header>
   <h1>Birdwatching</h1>
       <img src="images/dove.png" alt="a simple dove logo"></header>
-<footer>
+<nav>
       <ul>
         <li><span>Home</span></li>
         <li><a href="#">Get started</a></li>
@@ -24,7 +24,7 @@
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
     </ul>
-   </footer> 
+   </nav> 
     
 </header>
 
