--- a/assets/index.html
+++ b/assets/index.html
@@ -15,7 +15,7 @@
     
 <header>
   <h1>Birdwatching</h1>
-      <img src="images/dove.png" alt="a simple dove logo"></header>
+      <img src="images/dove.png" alt="a simple dove logo">
 <nav>
       <ul>
         <li><span>Home</span></li>
