--- a/splash/index.html
+++ b/splash/index.html
@@ -101,7 +101,7 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
-<img class="Firefoxlogo" src="firefox-addons120.jpg" alt="Firefoxlogo" >
+<img class="Firefoxlogo" src="firefoxlogo120.png" alt="Firefoxlogo" >
     </header>
 
     <main>
