--- a/splash/index.html
+++ b/splash/index.html
@@ -118,7 +118,7 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img src=>
         </a>
         <a href="https://www.mozilla.org/">
           <img>
